test/classes/initializers/error-initializer-return-type.good
error-initializer-return-type.chpl:2: error: initializers may not declare a return type
